samples/_failures_safe/1761252823_585a86_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2d66f3d.c: In function ‘multiply_matrices’:
./samples/SAFE/__tmp_e2d66f3d.c:114:17: error: expected expression at end of input
  114 |                 if (product > INT_MAX -
      |                 ^~
./samples/SAFE/__tmp_e2d66f3d.c:114:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e2d66f3d.c:114:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e2d66f3d.c:114:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e2d66f3d.c:114:17: error: expected declaration or statement at end of input
